<resources>
    // Main Labels
    <string name="app_name">ISV - Registro</string>
    <string name="title_activity_main">MainActivity</string>

    // Config Labels
    <string name="action_settings">Settings</string>

    // Login
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="forget_password">¿Olvido la contraseña?</string>

    <string name="geolocalization_photo">Fotos Geolocalizables</string>
    <string name="north">Norte</string>
    <string name="south">Sur</string>
    <string name="west">Oeste</string>
    <string name="east">Este</string>

    // Sección 1: Información de Inventario de Señales Viales
    <string name="tab_text_1">ISV</string>

    <string name="lbl_lat_lon">Captura de Latitud Y Longitud</string>
    <string name="txt_latitude">Latitud</string>
    <string name="txt_altitude">Altitud</string>
    <string name="txt_longitude">Longitud</string>
    <string name="btn_gps">Set GPS (Lat, Lon)</string>

    <string name="lbl_photos_signal">Fotos de la señal</string>
    <string name="photo_only">Foto</string>
    <string name="photo_front">Frontal</string>
    <string name="photo_back">Dorsal</string>
    <string name="photo_plaque">Placa</string>

    <string name="lbl_clasification_signal">Clasificación de la Señal</string>
    <string name="btn_horizontal">Horizontal</string>
    <string name="btn_vertical">Vertical</string>

    <string name="lbl_state">Estado de Registro</string>

    // Sección 2: Información

    <string name="tab_text_2">Información</string>

    <string name="lbl_location_signal">Ubicación de la Señal en la Via</string>
    <string name="btn_left">Norte - Sur</string>
    <string name="btn_arrow_left">N-S</string>

    <string name="btn_right">Oeste - Este</string>
    <string name="btn_arrow_right">O-E</string>

    <string name="lbl_size_signal">Tamaño de la Señal</string>
    <string name="btn_60">60 x 60</string>
    <string name="btn_75">75 x 75</string>
    <string name="btn_90">90 x 90</string>
    <string name="btn_120">120 x 120</string>

    <string name="lbl_stay_signal">Fijación de la Señal</string>
    <string name="btn_self_signal">Banderilla</string>
    <string name="btn_light_signal">Poste de Luz</string>
    <string name="btn_wall_signal">Pared</string>

    <string name="lbl_state_stay_signal">Estado de la Fijación de la Señal</string>

    // Sección 3: Datos Generales
    <string name="tab_text_3">Datos Generales</string>

    <string name="lbl_location_between_signal">La señal esta entre la:</string>
    <string name="lbl_location_and_signal">Y la:</string>
    <string name="lbl_location_with_signal">Con:</string>

    <string name="lbl_number">#</string>

    <string name="lbl_state_signal">Estado de la Señal:</string>


    // TODO: Arreglar Sintaxis
    // Vertical - Tipo Señal Vertical
    <string name="lbl_vertical_type_signal">Tipo de Señal Vertical</string>
    <string name="btn_vertical_informative">Informativa</string>
    <string name="btn_vertical_regulatory">Reglamentaria</string>
    <string name="btn_vertical_preventive">Preventiva</string>
    <string name="btn_vertical_work">Obra</string>
    <string name="btn_vertical_cycle_route">Ciclo Ruta</string>

    // Vertical - Tipo Señal Vertical - Señal Informativa
    <string name="lbl_vts_informative">Señal Informativa</string>
    <string name="btn_vts_informative_location">Inf. de Localización</string>
    <string name="btn_vts_informative_services">Inf. de Servicios</string>
    <string name="btn_vts_informative_turist">Inf. de Turismo</string>


    # HORIZONTALES

    // Horizontal - Tipo de Señal Horizontal
    <string name="lbl_type_horizontal_signal">Tipo de Señal Horizontal</string>
    <string name="lbl_sense_traffic">Sentido del Trafico</string>
    <string name="rbtn_unidirectional">Unidireccional</string>
    <string name="rbtn_bidirectional">Bidireccional</string>

    <string name="lbl_location_way">Ubicación en el Trayecto</string>
    <string name="btn_stretch">Tramo</string>
    <string name="btn_intersection">Intersección</string>

    <string name="lbl_location_lane">Ubicación en Carril</string>
    <string name="txt_location_signal">Carril de la señal</string>
    <string name="txt_percentage_coverage">Porcentaje de Cobertura</string>


    // Labels Activities Images
    <string name="title_horizontal_stretch">Horizontal Tramo</string>
    <string name="title_horizontal_intersection">Horizontal Intersección</string>

    <string name="title_vertical_info_localization">Información de Localización</string>
    <string name="title_vertical_info_services">Información de Servicios</string>
    <string name="title_vertical_info_turistic">Información de Turismo</string>

    <string name="title_vertical_regulatory">Señales Reglamentarias</string>
    <string name="title_vertical_preventives">Señales Preventivas</string>
    <string name="title_vertical_work">Señales de Obra</string>
    <string name="title_vertical_cycle_route"></string>


    // Spinners
    <string-array name="spinner_zip">
        <item name="select">Seleccione</item>
        <item name="spinner_zip_1">Carrera</item>
        <item name="spinner_zip_2">Calle</item>
        <item name="spinner_zip_3">Diagonal</item>
        <item name="spinner_zip_4">Transversal</item>
        <item name="spinner_zip_5">Avenida</item>
    </string-array>

    // Init Activity
    <string name="lbl_isv">Inventario de Señales Viales</string>
    <string name="txt_departamento">Digite el Departamento</string>
    <string name="txt_municipio">Digite el Municipio</string>
    <string name="init_process">Comenzar</string>
    // Extra LBLS
    <string name="select">Seleccione</string>
    <string name="information">Información</string>
    <string name="next">Siguiente</string>
    <string name="save">Guardar</string>
    <string name="exit">Salir</string>
    <string name="todo">TODO</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>

</resources>
