<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.signal.PhotoGPSActivity">
    <TextView
            android:text="@string/lbl_lat_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_lat_lon"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>
    <EditText
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_longitude"
            android:hint="@string/txt_longitude"
            android:autofillHints=""
            tools:targetApi="o"
            android:focusable="false"
            android:enabled="false"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/lbl_lat_lon"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn_gps"
            app:layout_constraintStart_toEndOf="@+id/txt_latitude" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.425"/>
    <EditText
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_latitude"
            android:hint="@string/txt_latitude" android:autofillHints=""
            tools:targetApi="o"
            android:focusable="false"
            android:enabled="false"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/lbl_lat_lon"/>
    <ImageButton
            android:src="@android:drawable/ic_menu_mylocation"
            android:layout_width="46dp"
            android:layout_height="45dp"
            android:id="@+id/btn_gps"
            android:contentDescription="@string/btn_gps"
            android:background="@drawable/border"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="@+id/lbl_lat_lon"/>
    <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/linear_horizontal_one" android:layout_marginTop="8dp"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintTop_toBottomOf="@+id/txt_longitude" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/lbl_photos_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_photos_signal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:visibility="invisible" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:baselineAligned="false"
            android:id="@+id/linear_horizontal_one"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="164dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_photos_signal"
            app:layout_constraintVertical_bias="0.089999974" android:visibility="invisible">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/linear_vertical_one" android:gravity="center|center_horizontal|center_vertical"
                android:layout_margin="5dp">
            <ImageButton
                    android:layout_width="125dp"
                    android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                    android:id="@+id/ibtn_front"
                    android:contentDescription="@string/photo_front" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/photo_front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cb_front" android:layout_weight="1"
                    android:textAlignment="center" android:enabled="false"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/linear_vertical_two"
                android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp">
            <CheckBox
                    android:text="@string/photo_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cb_back"
                    android:textAlignment="center" android:enabled="false"
                    android:layout_weight="1"/>
            <ImageButton
                    android:layout_width="125dp"
                    android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                    android:id="@+id/ibtn_back" android:layout_weight="1"
                    android:contentDescription="@string/photo_back"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/linear_vertical_three"
                android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp">
            <ImageButton
                    android:layout_width="125dp"
                    android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                    android:id="@+id/ibtn_plaque" android:layout_weight="1"
                    android:contentDescription="@string/photo_plaque"/>
            <CheckBox
                    android:text="@string/photo_plaque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cb_plaque" android:layout_weight="1"
                    android:textAlignment="center" android:enabled="false"
            />
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/lbl_location_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_location_signal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.508" app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:layout_marginTop="12dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/lbl_location_signal" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.16000003">
        <ToggleButton
                android:text="@string/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_left"
                android:textOff="@string/btn_left" android:textOn="@string/btn_arrow_left"/>
        <ToggleButton
                android:text="@string/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/btn_right"
                android:textOn="@string/btn_arrow_right"
                android:textOff="@string/btn_right"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="250dp"
            android:layout_height="wrap_content" android:id="@+id/btn_next_photo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/border"/>
</android.support.constraint.ConstraintLayout>