<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/tab_information"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".controller.MainActivity">
    <TextView
            android:text="@string/lbl_location_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_location_signal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/lbl_location_signal" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.502">
        <ToggleButton
                android:text="@string/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_left"
                android:textOff="@string/btn_left" android:textOn="@string/btn_arrow_left"/>
        <ToggleButton
                android:text="@string/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/btn_right"
                android:textOn="@string/btn_arrow_right"
                android:textOff="@string/btn_right"/>
    </LinearLayout>
    <View
            android:id="@+id/divider3"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <View
            android:id="@+id/divider5"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/lbl_size_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_size_signal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/lbl_size_signal"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:gravity="bottom">
            <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="60dp" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_60" android:contentDescription="@string/lbl_size_signal"
                    android:textAlignment="center"/>
            <ImageButton
                    android:layout_width="102dp"
                    android:layout_height="75dp" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_75" android:contentDescription="@string/lbl_size_signal"
                    android:textAlignment="center"/>
            <ImageButton
                    android:layout_width="102dp"
                    android:layout_height="90dp" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_90" android:contentDescription="@string/lbl_size_signal"
                    android:textAlignment="center"/>
            <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="120dp" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_120" android:contentDescription="@string/lbl_size_signal"
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:orientation="horizontal"
                    android:gravity="bottom|center">
                <RadioButton
                        android:text="@string/btn_60"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_60" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/btn_75"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_75" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/btn_90"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_90" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/btn_120"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_120" android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/lbl_stay_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_stay_signal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_stay_signal" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_self_signal" android:contentDescription="@string/lbl_stay_signal"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_light_signal" android:contentDescription="@string/lbl_stay_signal"/>
            <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/ibtn_wall_signal" android:contentDescription="@string/lbl_stay_signal"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" android:orientation="horizontal" android:gravity="bottom|center">
                <RadioButton
                        android:text="@string/btn_self_signal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_self_signal"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/btn_light_signal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_light_signal"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/btn_wall_signal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" android:id="@+id/rbtn_wall_signal"
                        android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="@string/lbl_state_stay_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_state_stay_signal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divider5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_state_stay_signal"
            app:layout_constraintVertical_bias="0.06999999" android:rating="0" android:numStars="4"
    />
</android.support.constraint.ConstraintLayout>