<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TypeSignalActivity">

    <Button
            android:text="@string/btn_horizontal"
            android:layout_width="276dp"
            android:layout_height="132dp"
            android:id="@+id/btn_horizontal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_clasification_signal" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_vertical" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:background="@drawable/border" android:textSize="36sp"/>
    <Button
            android:text="@string/btn_vertical"
            android:layout_width="276dp"
            android:layout_height="132dp"
            android:id="@+id/btn_vertical" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_horizontal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/border" android:textSize="36sp"/>
    <TextView
            android:text="@string/lbl_clasification_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_clasification_signal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>